--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+    <div ng-view=""></div> <!--on ne s'en sert pas car on utilise les routes plutôt-->
     </div>
 
     <div class="footer">
