--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
+              <li><a ng-href="#/education">Education</a></li>
+              <li><a ng-href="#/skills">Skills</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
@@ -88,6 +90,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/controllers/education.js"></script>
+
+    <script src="scripts/controllers/skills.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
