--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/education">Education</a></li>
               <li><a ng-href="#/skills">Skills</a></li>
+              <li><a ng-href="#/projects">Projects</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
@@ -87,12 +88,12 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/education.js"></script>
-
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/education.js"></script>
     <script src="scripts/controllers/skills.js"></script>
+    <script src="scripts/controllers/projects.js"></script>
     <!-- endbuild -->
 </body>
 </html>
