all the controllers done

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/subViews.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="vitrineApp">
@@ -33,7 +35,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">vitrine</a>
+            <a class="navbar-brand" href="#/">Garance's corner</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -43,7 +45,8 @@
               <li><a ng-href="#/education">Education</a></li>
               <li><a ng-href="#/skills">Skills</a></li>
               <li><a ng-href="#/projects">Projects</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/work">Work</a></li>
+              <li><a ng-href="#/hobbies">Hobbies</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -90,10 +93,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/hobbies.js"></script>
     <script src="scripts/controllers/education.js"></script>
     <script src="scripts/controllers/skills.js"></script>
     <script src="scripts/controllers/projects.js"></script>
+    <script src="scripts/controllers/work.js"></script>
     <!-- endbuild -->
 </body>
 </html>
