--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,8 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> With much help from the Yeoman team,
+          you're happily surfing on Garance's website ! <span class="glyphicon glyphicon-star"></span> </p>
       </div>
     </div>
 
