--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+      <div class="navbar navbar-default navbar-custom" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
@@ -48,7 +48,7 @@
               <li><a ng-href="#/projects">Projects</a></li>
               <li><a ng-href="#/work">Work</a></li>
               <li><a ng-href="#/hobbies">Hobbies</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#contact/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -102,6 +102,7 @@
     <script src="scripts/controllers/skills.js"></script>
     <script src="scripts/controllers/projects.js"></script>
     <script src="scripts/controllers/work.js"></script>
+    <script src="scripts/controllers/contact.js"></script>
     <!-- endbuild -->
 </body>
 </html>
